--- a/style.css
+++ b/style.css
@@ -271,20 +271,19 @@ p {
 
 @media screen and (max-width: 870px) {
 
-    .secondchild a {
-        display: none;
+    .secondchild:hover a {
+        display: block;
     }
-    body{
-        overflow-x: visible;
-    }
+
+
     a{
-        display:block;
+        display: none;
         cursor: pointer;
         padding-right: 20%;
     }
 
     .secondchild {
-        display: block;
+        display: inline-block;
         width: 30px;
         height: 20px;
         position: relative;
@@ -293,7 +292,7 @@ p {
 
     .secondchild span {
         display: block;
-        position: absolute;
+        /* position: absolute; */
         height: 3px;
         width: 100%;
         background-color: #333;
