--- a/style.css
+++ b/style.css
@@ -251,8 +251,8 @@ p {
 .imgg {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     gap: 3.2rem;
 
 
@@ -271,12 +271,18 @@ p {
 
 @media screen and (max-width: 870px) {
 
+    /* *{ */
+    /* padding: 0; */
+    /* margin: 0; */
+    /* box-sizing: ; */
+    /*  */
+    /* } */
     .secondchild:hover a {
         display: block;
     }
 
 
-    a{
+    a {
         display: none;
         cursor: pointer;
         padding-right: 20%;
@@ -292,7 +298,7 @@ p {
 
     .secondchild span {
         display: block;
-        /* position: absolute; */
+
         height: 3px;
         width: 100%;
         background-color: #333;
@@ -322,16 +328,22 @@ p {
         bottom: -10px;
     }
 
-   
+
     .gparent {
         flex-direction: column;
+        padding: 6% 0% 0% 0%;
 
     }
 
     .gfirstchild {
         text-align: center;
         margin-bottom: 10%;
-        padding: 0%;
+        padding: 6%;
+        font-size: 10px;
+    }
+
+    .gptext3 {
+        font-size: 15px;
     }
 
     button {
@@ -340,14 +352,17 @@ p {
 
     .gsecondchild {
         width: 100%;
+        padding: 0;
     }
 
     .ggparent {
         flex-direction: column-reverse;
+        padding: 8% 4%;
     }
 
     .ggfirstchild {
         width: 100%;
+
     }
 
     .ggptext1 {
@@ -377,12 +392,28 @@ p {
     }
 
     .sj {
-        flex-direction: column;
+        font-size: 18px;
+
+    }
+
+    .imgg img {
+        width: 10%;
+        padding: 0;
+        margin: 0;
+
+    }
+
+    .gggfirstchild {
+        width: 40%;
     }
 
     .gggparent {
-        justify-content: space-evenly;
         flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        gap: -0%;
+        padding: 0%;
+
 
     }
 }
