--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ button {
 }
 
 .ggfirstchild {
-    width: 100%;
+    /* width: 100%; */
     border: 0.1em solid #155EEF;
     border-right: none;
     padding: 0.2em;
@@ -167,7 +167,7 @@ button {
     font-family: 'Halant';
     font-style: normal;
     font-weight: 600;
-    font-size: 119.5%;
+    font-size: 250%;
     line-height: 120%;
     text-align: left;
     margin-bottom: 5%;
@@ -218,7 +218,7 @@ button {
 }
 
 .posisecondchild {
-    width: 53%;
+    width: 50%;
     position: absolute;
     left: 44%;
     top: 25%;
